# stepik_autotest

./: .env.base  .env.credentials.example  .env.mobile  .env.mobile.bstack  .env.mobile.local  .env.web  .gitignore  README.md  config.py  project_config.py  pyproject.toml  pytest.ini  requirements.txt
data/: data.py  enums.py  fake.py
helpers/: common.py  logger.py
helpers/mobile/: custom_locator.py  gestures.py  mobile_attach.py
helpers/web/: api_client.py  ui_attach.py  utils.py
model/: app.py
model/components/: auth_widget.py  navbar.py
model/pages/: CatalogPage.py  LearnPage.py
stepik/api/: api_client.py  client.py
stepik/api/models/: course_list.py  enroll.py  meta.py  token.py  user_courses.py
stepik/mobile/: android_app.py  mobile_methods.py
stepik/mobile/components/: navbar.py
stepik/mobile/pages/: catalog_page.py  onboarding_page.py  profile_page.py  sign_in_page.py
stepik/ui/: web_app.py
stepik/ui/components/: profile_dropdown_menu.py
stepik/ui/pages/: catalog_page.py  catalog_search_page.py  learn_page.py
tests/: __init__.py  conftest.py  test_authorisation.py  test_logout.py  test_search_courses.py
tests/api/: __init__.py  conftest.py  test_auth.py  test_enroll.py
tests/mobile/: conftest.py  test_auth.py  test_catalog.py  test_onboarding.py
tests/web/: conftest.py  test_authorisation.py  test_logout.py  test_search_courses.py
