[project]
name = "stepik-autotest"
version = "0.1.0"
description = ""
authors = [
    {name = "artur.balsis",email = "artur.balsis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest (==8.3.5)",
    "selene (==2.0.0rc9)",
    "allure-pytest (==2.14.2)",
    "pydantic (==2.11.4)",
    "python-dotenv (==1.1.0)",
    "pytest-xdist (==3.6.1)",
    "requests (==2.32.3)",
    "appium-python-client (==5.1.1)",
    "curlify (==2.2.1)",
    "pydantic-settings (==2.9.1)",
    "faker (==37.1.0)",
    "pytils (==0.4.3)",
    "pytest-rerunfailures (==15.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
